feat: add sessions by the oidc
